--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img src="logo.png" alt="Block Game Logo">
-        <h1>Block Game</h1>
+        <h1>Block Game. Тетрис с возможностью игры по сети.</h1>
         <nav>
             <ul>
                 <li><a href="1.chm" download>Документация к проекту</a></li>
