--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1>Block Game. Тетрис с возможностью игры по сети.</h1>
         <nav>
             <ul>
-                <li><a href="1.chm" download>Документация к проекту</a></li>
-                <li><a href="2.pptx" download>Ручная документация</a></li>
+                <li><a href="Documentation.chm" download="Documentation.chm">Документация к проекту</a></li>
+                <li><a href="Руководство пользователя для проекта.pptx" download="Руководство пользователя для проекта.pptx">Ручная документация для пользователей</a></li>
             </ul>
         </nav>
     </header>
