--- a/index.html
+++ b/index.html
@@ -20,11 +20,18 @@
     <main>
         <section>
             <h2>Сведения об авторе</h2>
-            <p>Автор: Я создал это.</p>
+            <p>Автором данного проекта является студент группы ПИ-20а, Коржов Антон Владимирович.<br/>
+            Автор специализируется на разработке приложений на различных языках программирования, включая:<br/>
+            C#, C++, C, Java. Также автор разрабатывает игры под мобильные устройства на движе Unity.</p>
         </section>
         <section>
-            <h2>Зачем это?</h2>
-            <p>Для ознакомления.</p>
+            <h2>Для чего создан данный проект</h2>
+            <p>Данный проект создан с одной целью: показать, как старые игры могут преобразиться,<br/>
+            если в них добавить аспект современности (игра по сети). Данный проект способен вернуть чувство ностальгии тем, <br/>
+            кто в свое время обожал и любил тетрис, проводя в нём всё своё время. Пользователи, которые любят тетрис<br/>
+            смогут посмотреть на свою любимую игру под другим углом, что создаст для них новые ощущения, <br/>
+            когда они зайдут в многопользовательский режим, где нужно соревноваться, чтобы доказать,<br/>
+            что лучше тебя там нет!</p>
         </section>
         <section>
             <h2>Модули компоненты</h2>
