--- a/index.html
+++ b/index.html
@@ -36,21 +36,53 @@
         <section>
             <h2>Модули компоненты</h2>
             <ul>
-                <li>Сервер
+                <li>1. Серверная часть
                     <ul>
-                        <li>1.1...</li>
-                        <li>1.2...</li>
-                        <li>1.3...</li>
-                        <li>1.4...</li>
-                        <li>1.5...</li>
+                        <li>1.1 Управление игровыми сессиями.</li>
+                        <li>1.2 Обработка подключений игроков.</li>
+                        <li>1.3 Обработка отключения игроков.</li>
+                        <li>1.4 Синхронизация игрового процесса между клиентами.</li>
+                        <li>1.5 Регистрация новых игровых сессий.</li>
+                        <li>1.6 Уничтожение уже сыгранных игровых сессий.</li>
+                        <li>1.7 Логика обработки действий игроков (поворот блоков, движение блоков, передача количества очков между игроками и т.д.).</li>
+                        <li>1.8 Обработка событий лобби (создание, поиск и подключение).</li>
+                        <li>1.9 Анализ игровой сессии и выбор победителя.</li>
+                        <li>1.10 Создание аккаунта для пользователя.</li>
                     </ul>
                 </li>
-                <li>Интерфейс
+                <li>2. Клиентская часть
                     <ul>
-                        <li>2.1...</li>
-                        <li>2.2...</li>
-                        <li>2.3...</li>
-                        <li>2.4...</li>
+                        <li>2.1 Обработка логики загрузки главного меню и вспомогательных окон.</li>
+                        <li>2.2 Обработка выбора пунктов меню из различных окон.</li>
+                        <li>2.3 Обработка переключения параметров (музыка, звуковые эффекты и т.д.).</li>
+                        <li>2.4 Обработка загрузки файлов с локального устройства.</li>
+                        <li>2.5 Обработка проверки подключения к интернету (если выбирается режим игры онлайн).</li>
+                        <li>2.6 Обработка установки сложности игрового процесса (для одиночной игры).</li>
+                        <li>2.7 Сохранение результатов одиночной игры на локальном устройстве.</li>
+                    </ul>
+                </li>
+                <li>3. Интерфейс
+                    <ul>
+                        <li>3.1 Отображение визуального интерфейса окон программы.</li>
+                        <li>3.2 Выбор сложности игры (для одиночной игры).</li>
+                        <li>3.3 Интерактивные элементы управления (кнопки, ползунки и др.).</li>
+                        <li>3.4 Визуализация игрового поля и фигур.</li>
+                        <li>3.5 Настройки игры (звук, управление и т.д.).</li>
+                        <li>3.6 Отображение состояния игрового процесса (количество очков, следующая фигура и т.д.).</li>
+                        <li>3.7 Анимация (падение фигур, очистка линии и т.д.).</li>
+                        <li>3.8 Локализация интерфейса.</li>
+                        <li>3.9 Вывод результатов игрового процесса.</li>
+                    </ul>
+                </li>
+                <li>4. Интерфейс
+                    <ul>
+                        <li>4.1 Генерация случайных фигур и их последовательностей.</li>
+                        <li>4.2 Расчёт столкновения фигур.</li>
+                        <li>4.3 Анализ возможности установки фигур.</li>
+                        <li>4.4 Анализ статуса возможности продолжать игру.</li>
+                        <li>4.5 Обработка логики очистки линий игрового поля.</li>
+                        <li>4.6 Обработка расчёта очков и их начисление.</li>
+                        <li>4.7 Управление уровнем сложности игры (установка скорости падения и её увеличение).</li>
                     </ul>
                 </li>
             </ul>
