--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
     </main>
     <footer>
         <p>ДонНТУ. Кафедра "ПРОГРАММНАЯ ИНЖЕНЕРИЯ"</p>
-        <p>Контакты: телефон, почта</p>
+        <p><strong>Контакты автора проекта:</strong><br/>
+        <b>Телефон для связи:</b> <i>+7 949 310 51 76</i><br>
+        <b>E-mail адрес для связи:</b> <u>antongood89@gmail.com</u>
+        </p>
     </footer>
 </body>
 </html>
