--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>Сведения об авторе</h2>
             <p>Автором данного проекта является студент группы ПИ-20а, Коржов Антон Владимирович.<br/>
             Автор специализируется на разработке приложений на различных языках программирования, включая:<br/>
-            C#, C++, C, Java. Также автор разрабатывает игры под мобильные устройства на движе Unity.</p>
+            C#, C++, C, Java. Также автор разрабатывает игры под мобильные устройства на движке Unity.</p>
         </section>
         <section>
             <h2>Для чего создан данный проект</h2>
